[tool.poetry]
name = "reflex-practice"
version = "0.1.0"
description = ""
authors = ["Dowon Oh <dhehdnjs03@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
reflex = "^0.5.9"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
